Fixed apply popup on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -93,7 +93,7 @@
 		color: inherit;
 		text-decoration: none;
 		transition: all 200ms ease;
-		z-index: 2;
+		z-index: 3;
 	}
 
 	.mid {
@@ -105,7 +105,7 @@
 	body {
 		margin: 0;
 		padding: 0;
-		z-index: 1;
+		z-index: 2;
 		background-color: #efefef;
 	}
 
@@ -1826,11 +1826,13 @@ opacity: 0.6;
     height: 100%;
     background:rgba(0,0,0,0.5);
     text-align: center;
-    z-index : 1;
+    z-index : 50001;
 }
 
 #apply-popup {
     padding: 5%;
-    height: 100%;
     width: auto;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
 }
